# Neuromind-EEG-Classifier

./: .gitignore  CHANGELOG.md  CITATION.cff  CLEAN_PROJECT_STRUCTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  EEG_Classifier_Technical_Report.md  LICENSE  NEUROMIND_LIVE_README.md  NeuroMind_Complete_Project_Report.md  NeuroMind_EEG_Project_Report.md  NeuroMind_PPT_Content.md  NeuroMind_Project_Report.md  PROFESSIONAL_ASSESSMENT.md  PROJECT_STATUS.md  PUSH_TO_GITHUB_GUIDE.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  get_sample_images.py  pyproject.toml  requirements.txt  requirements_github.txt  run_neuromind_live.py
.github/workflows/: ci.yml  security.yml
assets/: README.md  SCREENSHOT_GUIDE.md
assets/architecture_diagrams/: .gitkeep  README.md
assets/demo_screenshots/: .gitkeep  README.md
docs/: Architecture.md  Dataset.md  FAQ.md  Model.md  Troubleshooting.md  api_reference.md  deployment_guide.md  eeg_classification_background.md
eeg_classifier/: README.md  README_MODERN.md  app.py  demo_guide.md  download_data.py  main.py  requirements.txt  requirements_modern.txt  run_modern_app.py
eeg_classifier/app/: modern_app.py  neuromind_live_app.py  streamlit_app.py
eeg_classifier/notebooks/: EEG_Classifier_Walkthrough.ipynb
eeg_classifier/src/: __init__.py  dataset.py  deap_loader.py  evaluate.py  gradcam.py  model.py  predict.py  preprocess.py
neuromind-eeg-classifier/: .gitignore  GITHUB_READY_SUMMARY.md  LICENSE  README.md  download_data.py  requirements.txt  setup.py
neuromind-eeg-classifier/app/: streamlit_app.py
neuromind-eeg-classifier/docs/: README.md
neuromind-eeg-classifier/src/: __init__.py  dataset.py  model.py  preprocess.py
neuromind-minimal/: .gitignore  README.md  app.py  download_data.py  model.py  preprocess.py  requirements.txt  train.py
scripts/: create_demo_placeholders.py  download_data.py  evaluate_models.py  generate_professional_assets.py  healthcheck.py  performance_monitor.py  setup_neuromind.py  train_models.py  update_readme_with_screenshots.py
src/: __init__.py  app.py
src/training/: __init__.py  calibration.py  trainer.py
src/utils/: __init__.py
tests/: test_gradcam.py  test_integration.py  test_models.py  test_preprocessing.py
